--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thakor Sandip sinh</title>
+    <title>Pulkit Kumar Mathur</title>
+    <style>
+        .center-text {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <div>
-        <h2>Thakor Sandip sinh</h2>
-        <span>thakor.sandipsinh2021@vitstudent.ac.in</span>
+    <div class="center-text">
+        <h2>Pulkit Kumar Mathur</h2>
+        <span>pulkit.kumar2021@vitbhopal.ac.in</span>
         <div><br>Assignment-2</div>
     </div>
-    <div style="position: relative; top:-70px;">
+    <div style="position: relative; top: -70px;">
         <center>
             <h1>Index Page</h1>
             <table border="1" bordercolor="Black" cellpadding="3">
