--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pulkit Kumar Mathur</title>
-    <style>
-        .center-text {
-            text-align: center;
-        }
-    </style>
 </head>
 <body>
-    <div class="center-text">
-        <h2>Pulkit Kumar Mathur</h2>
-        <span>pulkit.kumar2021@vitbhopal.ac.in</span>
+    <div>
+        <h2>Name: Pulkit Kumar Mathur</h2>
+        <span>Email: pulkit.kumar2021@vitbhopal.ac.in</span>
         <div><br>Assignment-2</div>
     </div>
-    <div style="position: relative; top: -70px;">
+    <div style="position: relative; top:-70px;">
         <center>
             <h1>Index Page</h1>
             <table border="1" bordercolor="Black" cellpadding="3">
