--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div>
         <h2>Name: Pulkit Kumar Mathur</h2>
         <span>Email: pulkit.kumar2021@vitbhopal.ac.in</span>
-        <div><br>Assignment-2</div>
+        <div><br>Task - 2</div>
     </div>
     <div style="position: relative; top:-70px;">
         <center>
